# desn1k-atlas

./: .gitattributes  .gitignore  Cargo.toml  README.md
.devcontainer/: devcontainer.json
electrical/: PROJECT_SYM.kicad_sym  desn_elec.kicad_pro  desn_elec.kicad_sch  sym-lib-table  ~desn_elec.kicad_sch.lck
electrical/AP63205WU/: AP63205WU.bak  AP63205WU.kicad_sym
electrical/AP63205WU/footprints.pretty/: SOIC_05WU-7_DIO-L.kicad_mod  SOIC_05WU-7_DIO-M.kicad_mod
mechanical/: Claw.iam  DESN1000.ipj  Drivebase.iam  Frame.ipt  main.iam
mechanical/COTS/emax-es3054/: SOURCE.txt  Servo emax ES3054.ipt  Servo part 2.ipt  servo part 1.ipt  servo part 3.ipt
mechanical/COTS/mpu6050/: MPU6050 v2.ipt  SOURCE.txt
mechanical/Claw/: ClawHalf.ipt  ClawHolder.ipt
mechanical/Claw/Design Accelerator/: Spur Gear11.ipt  Spur Gear12.ipt  Spur Gear21.ipt  Spur Gear22.ipt  Spur Gears1.iam  (+1 more)
mechanical/Drivebase/: ServoAttachment.ipt
mechanical/Electronics/: GyroMount.iam  GyroMount.ipt
mechanical/KOP/: FuelCell.ipt  Propeller.ipt  PropellerDuct.ipt
software/: Cargo.toml  deploy_os.sh  make.sh  make_os.sh
software/.cargo/: config  config.toml
software/scripts/: flash.sh
software/src/: main.rs  robot.rs
software/src/command/: command.rs  command_scheduler.rs  command_switch_controller.rs  eventloop.rs  mod.rs  subsystem.rs  trigger.rs
software/src/hardware/: mod.rs  switch_controller.rs  switch_pro_controller.rs
software/src/subsystems/: claw_subsystem.rs  drive_subsystem.rs  mod.rs
software/src/util/: mod.rs
src/: Robot.rs  RobotContainer.rs  main.rs
(+44 files in other folders)
