[package]
name = "desn"
version = "0.1.0"
authors = ["Aavin Fernando <aavin.fernando@gmail.com>"]
edition = "2021"
license = "MIT OR Apache-2.0"

[profile.release]
debug = true

[dependencies]
esp32-hal = "0.18.0"
esp-backtrace = { version = "0.11.0", features = ["esp32", "panic-handler", "exception-handler", "println"] }
esp-println = { version = "0.9.0", features = ["esp32", "log"] }
log = { version = "0.4.20" }
uom = { version = "0.35.0", default-features = false, features = ["f32", "si"]  }

[features]
default = ["esp32-hal/xtal-40mhz"]

