[package]
name = "atlas-software"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rppal = { version = "0.17.1", features = ["hal-unproven"] }
uom = { version = "0.35.0", default-features = false, features = ["f32", "si", "std"]  }
stack-buf = { version = "0.1.6", default-features = false }
evdev = {version = "0.12.1"}
mpu6050 = "0.1.6"
