[package]
name = "atlas-software"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rppal = { version = "0.17.1", features = ["hal", "hal-unproven"] }
uom = { version = "0.35.0", default-features = false, features = ["f32", "si", "std"]  }
evdev = {version = "0.12.1"}
mpu6050-dmp = "0.4.0"
embedded-hal = "1.0.0"
arrayvec = "0.7.4"
